--- a/common/app/assets/stylesheets/module/_facia.scss
+++ b/common/app/assets/stylesheets/module/_facia.scss
@@ -4,13 +4,25 @@
     padding-left: 9px;
 }
 @mixin overlay {
-    position:absolute;
-    bottom: 0;
-    background-color: rgba(0, 86, 136, 0.6);
-    color: #ffffff;
-    margin: 0;
-    padding: $baseline*3 $baseline;
+    .trail__title {
+        position:absolute;
+        bottom: 0;
+        background-color: rgba(0, 86, 136, 0.6);
+        color: #ffffff;
+        margin: 0;
+        padding: $baseline*3 $baseline;
+        @include box-sizing(border-box);
+    }
+}
+
+@mixin small-card {
+    height: 50%;
     @include box-sizing(border-box);
+    float: none;
+    @include bordered;
+    .trail__image {
+        display: none;
+    }
 }
 
 #preloads{
@@ -57,11 +69,13 @@
         }
     }
 
+    .trail:nth-child(1) {
+        background-color: #005688;
+    }
+
     .trails-count-1 {
         .trail {
-            background-color: #005688;
             width: 100%;
-            height: 100%;
         }
         .trail__image {
             margin-right: 20px;
@@ -79,7 +93,6 @@
 
     .trails-count-2 {
         .trail:nth-child(1) {
-            background-color: #005688;
             .trail__image {
                 margin-right: 20px;
             }
@@ -123,7 +136,6 @@
 
         .trail:nth-child(1) {
             height: auto;
-            background-color: #005688;
 
             .trail__image{
                 float:none;
@@ -135,7 +147,6 @@
                 margin: $baseline*2 $baseline $baseline*3;
             }
         }
-
         .trail:nth-child(n+2) {
             margin: $baseline*3 0 0;
             padding: $baseline*3 $baseline 0;
@@ -147,7 +158,6 @@
                 @include font($serif, 700, 20, 24);
             }
         }
-
     }
 
     @include mq(tablet, desktop) {
@@ -182,10 +192,7 @@
             .trail:nth-child(1) {
                 width: 380px;
                 margin-right: 10px;
-
-                .trail__title {
-                    @include overlay;
-                }
+                @include overlay;
             }
             .trail:nth-child(2) {
                 @include bordered;
@@ -204,18 +211,10 @@
             .trail:nth-child(1) {
                 width: 380px;
                 margin-right: 10px;
-                .trail__title {
-                    @include overlay;
-                }
+                @include overlay;
             }
             .trail:nth-child(n+2) {
-                height: 50%;
-                @include box-sizing(border-box);
-                float: none;
-                @include bordered;
-                .trail__image {
-                    display: none;
-                }
+                @include small-card;
                 .trial__title {
                     margin: $baseline*3 0 0;
                 }
@@ -239,18 +238,11 @@
 
             .trail:nth-child(1) {
                 width: 350px;
-                .trail__title {
-                    @include overlay;
-                }
+                @include overlay;
             }
             .trail:nth-child(n+2) {
+                @include small-card;
                 height: 33%;
-                @include box-sizing(border-box);
-                float: none;
-                @include bordered;
-                .trail__image {
-                    display: none;
-                }
             }
             .trail:nth-child(2) {
                 height: 34%;
@@ -296,10 +288,7 @@
             .trail:nth-child(1) {
                 width: 540px;
                 margin-right: 10px;
-
-                .trail__title {
-                    @include overlay;
-                }
+                @include overlay;
             }
             .trail:nth-child(2) {
                 @include bordered;
@@ -318,18 +307,10 @@
             .trail:nth-child(1) {
                 width: 540px;
                 margin-right: 10px;
-                .trail__title {
-                    @include overlay;
-                }
+                @include overlay;
             }
             .trail:nth-child(n+2) {
-                height: 50%;
-                @include box-sizing(border-box);
-                float: none;
-                @include bordered;
-                .trail__image {
-                    display: none;
-                }
+                @include small-card;
                 .trial__title {
                     margin: $baseline*3 0 0;
                 }
@@ -353,22 +334,14 @@
 
             .trail:nth-child(1) {
                 width: 540px;
-                .trail__title {
-                    @include overlay;
-                }
-            }
-            .trail:nth-child(n+3) {
-                height: 50%;
-                @include box-sizing(border-box);
-                float: none;
-                @include bordered;
-                .trail__image {
-                    display: none;
-                }
+                @include overlay;
             }
             .trail:nth-child(2) {
                 width: 300px;
                 margin: 0 10px 0 20px;
+            }
+            .trail:nth-child(n+3) {
+                @include small-card;
             }
             .trail:nth-child(3) {
                 padding-bottom: 10px;
@@ -433,9 +406,7 @@
 
             .trail:nth-child(1) {
                 width: 620px;
-                .trail__title {
-                    @include overlay;
-                }
+                @include overlay;
             }
             .trail:nth-child(n+2) {
                 width: 300px;
@@ -460,22 +431,14 @@
 
             .trail:nth-child(1) {
                 width: 620px;
-                .trail__title {
-                    @include overlay;
-                }
-            }
-            .trail:nth-child(n+3) {
-                height: 50%;
-                @include box-sizing(border-box);
-                float: none;
-                @include bordered;
-                .trail__image {
-                    display: none;
-                }
+                @include overlay;
             }
             .trail:nth-child(2) {
                 margin: 0 10px 0 20px;
                 width: 300px;
+            }
+            .trail:nth-child(n+3) {
+                @include small-card;
             }
             .trail:nth-child(3) {
                 padding-bottom: 10px;
