Change classname (again)

--- a/applications/app/views/fragments/galleryBody.scala.html
+++ b/applications/app/views/fragments/galleryBody.scala.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
 
-            <div class="ab-gallerytest--var-a" data-link-name="Gallery thumbnail sheet">
+            <div class="ab-gallerytest--newstyle" data-link-name="Gallery thumbnail sheet">
                 @fragments.galleryThumbs(gallery)
             </div>
 
