--- a/facia/app/views/fragments/frontBlock.scala.html
+++ b/facia/app/views/fragments/frontBlock.scala.html
@@ -1,13 +1,25 @@
-@(block: Trailblock, page: FrontPage)(implicit request: RequestHeader)
+@(block: Trailblock, page: FrontPage, index: Int)(implicit request: RequestHeader)
 
-<section data-link-name="block | @block.description.name">
+@if(block.trails.nonEmpty){
 
-    @block.description.style match {
-        case Some(Thumbnail)    => { @trailblocks.thumbnail(block.trails, block.description.numItemsVisible) }
-        case Some(Headline)     => { @trailblocks.headline(block.trails, block.description.numItemsVisible) }
-        case Some(SectionFront) => { @trailblocks.section(block.trails, block.description.numItemsVisible, numWithImages = 3 ) }
-        case Some(TopStories)   => { @trailblocks.topStories(block.trails.take(4)) }
-        case _                  => { @trailblocks.featured(block.trails, block.description.numItemsVisible) }
-    }
+    <section class="front-section zone-@block.description.section @block.description.style.map(_.className)"
+             data-link-name="block | @block.description.name">
 
-</section>
+        @if(block.description.id != "") {
+            @if(index == 0 && !page.isNetworkFront) {
+                @fragments.headers.sectionHead(block.description.name)
+            } else {
+                @fragments.headers.frontSectionHead(block.description, page.isNetworkFront, Some(Edition(request)))
+            }
+        }
+
+        @block.description.style match {
+            case Some(Thumbnail)    => { @trailblocks.thumbnail(block.trails, block.description.numItemsVisible) }
+            case Some(Headline)     => { @trailblocks.headline(block.trails, block.description.numItemsVisible) }
+            case Some(SectionFront) => { @trailblocks.section(block.trails, block.description.numItemsVisible, numWithImages = 3 ) }
+            case Some(TopStories)   => { @trailblocks.topStories(block.trails.take(4)) }
+            case _                  => { @trailblocks.featured(block.trails, block.description.numItemsVisible) }
+        }
+    </section>
+
+}
