Working affix module and swipe bar

--- a/common/app/assets/stylesheets/global.scss
+++ b/common/app/assets/stylesheets/global.scss
@@ -68,6 +68,7 @@
    ========================================================================== */
 
 @import "module/experiments/_ears";
+@import "module/experiments/_affix";
 
 
 /* ==========================================================================
