--- a/common/app/assets/stylesheets/module/experiments/_ab-inline-link-card.scss
+++ b/common/app/assets/stylesheets/module/experiments/_ab-inline-link-card.scss
@@ -8,7 +8,7 @@
     float: left;
     clear: left;
     width: $a-leftCol-width;
-    margin-left: ($a-leftCol-width + $gutter)*-1;
+    margin-left: ($a-leftCol-width + $gs-gutter)*-1;
     margin-bottom: $baseline*2;
 
     @include mq($a-leftCol-trigger) {
